--- a/css/styles.css
+++ b/css/styles.css
@@ -104,21 +104,10 @@ img {
   margin-right: 76px;
 }
 
-.site-nav .link {
+/* .site-nav .link {
   color: var(--primary-text-color);
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
-}
-
-.site-nav .link.current {
-  color: var(--accent-color);
-}
 .site-link {
   font-weight: 500;
   font-size: 16px;
@@ -128,6 +117,26 @@ img {
   padding-top: 24px;
   padding-bottom: 24px;
   display: block;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
+.site-link.link:hover,
+.site-link.link:focus,
+.site-link.current {
+  color: var(--accent-color);
+}
+
+.site-link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
 }
 
 /* контакти */
