--- a/css/styles.css
+++ b/css/styles.css
@@ -684,6 +684,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px;
 }
 
 .modal-close-btn {
@@ -693,6 +694,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 24px;
   cursor: pointer;
   width: 24px;
   height: 24px;
@@ -717,4 +719,30 @@ img {
 .modal-close-btn:hover .close-icon,
 .modal-close-btn:focus .close-icon {
   fill: var(--primary-white-color);
+}
+
+.is-hidden {
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-titel {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  padding-top: 48px;
+  margin-bottom: 16px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
 }
